# sheet2csv

./: LICENSE.txt  Pipfile  README.md  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: publish.yml  test.yml
sheet2csv/: __init__.py
tests/: test_basic.py  tests.py
tests/data/: test_sheet_cols.json  test_sheet_cols_labels.json  test_sheet_rows.json  test_sheet_rows_labels.json
