[metadata]
name = sheet2csv
version = attr: sheet2csv.__version__
author = sledilnik.org
author_email = info@sledilnik.org
description = A package to export Google Sheet to CSV via API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sledilnik/sheet2csv
project_urls =
    Bug Tracker = https://github.com/sledilnik/sheet2csv/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
packages = find:
python_requires = >=3.6
install_requires =
    google-api-python-client
    google-auth-httplib2
    google-auth-oauthlib
    python-dateutil

[options.packages.find]
where = .
